2008-07-23  Juri Linkov  <juri@jurta.org>

	* replace.el (multi-query-replace-map): New variable.
	(perform-replace): Add processing of new multi-buffer keys bound
	to `automatic-all' and `exit-current'.  Set `query-flag' to nil
	if last input char was `automatic-all'.  Set new local variable
	`multi-buffer' to t when one of new two keys were typed.  Return
	non-nil value of `multi-buffer' that tells to calling functions
	to continue replacement on the next file.

	* progmodes/etags.el (tags-query-replace): Set arg `map' of
	`perform-replace' to `multi-query-replace-map'.

2008-07-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* diff-mode.el (diff-auto-refine-mode): Remove lighter, since it's
	otherwise displayed in every buffer.

	* vc-arch.el (vc-arch-trim-make-sentinel): Use a closure.
	(vc-arch-trim-one-revlib): Delete temp directories as well.

2008-07-22  Stephen Eglen  <stephen@gnu.org>

	* iswitchb.el (iswitchb-delim): New variable, suggested by Ted Roden.

2008-07-22  Sven Joachim <svenjoac@gmx.de>  (tiny change)

	* vc-dir.el (vc-dir-recompute-file-state): Fix mismatched paenthesis.

2008-07-22  Miles Bader  <miles@gnu.org>

	* progmodes/sh-script.el (sh-newline-and-indent): Remove.
	(sh-mode-map): Remove remapping of newline-and-indent.

2008-07-22  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (Todo): Update.

	* vc-hooks.el: Remove obsolete comment.

	* vc-git.el (vc-git-status-printer): Update the directory display
	to match the default.

	* vc-dir.el (vc-dir-recompute-file-state): Add workaround for CVS.

2008-07-21  Chong Yidong  <cyd@stupidchicken.com>

	* menu-bar.el (menu-bar-line-wrapping-menu): Use Visual Line mode
	for "word wrap" command.

	* simple.el (visual-line-mode): Disable truncate-partial-width-windows.

2008-07-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* term/ns-win.el: Rename ns- functions/variables to the
	corresponding x- versions.
	(x-select-text, x-cut-buffer-or-selection-value)